--- a/raster_graphic/style.css
+++ b/raster_graphic/style.css
@@ -13,9 +13,9 @@ header{
         }
         
         #catherine{
-            position: fixed;
+            position: sticky;
             
-            left: 55%;
+            left: 200;
 
         }
 
