--- a/raster_graphic/style.css
+++ b/raster_graphic/style.css
@@ -13,8 +13,9 @@ header{
         }
         
         #catherine{
-            position: sticky;
+            position: absolute;
             left: 75;
+            bottom: 0px;
 
         }
 
