--- a/raster_graphic/style.css
+++ b/raster_graphic/style.css
@@ -10,6 +10,7 @@ body{
 header{
             color: royalblue;
             text-align: center;
+            font-size: 2em ;
         }
         
         #catherine{
