--- a/me_css/styles/style.css
+++ b/me_css/styles/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-      padding: 0;
+  padding: 0;
   text-align: center;
   font-family: 'Roboto Condensed', sans-serif;
   font-style: bold;
@@ -10,6 +10,7 @@ body {
 }
 
 a {
+
   display: inline-block; 
   width: 100px;
   margin: 3em;
@@ -39,7 +40,8 @@ h1 {
       padding: 2%;
       margin-bottom: 1%;
       margin-top: 1%;
-     
+      border-top: dotted;
+      border-bottom: dotted 3px;
       
     }
 
@@ -69,6 +71,8 @@ dl {
   text-align: left;
 }
 
+
+
 li {
   color: white;
   padding: 1%;
@@ -80,13 +84,15 @@ li {
 }
 
 footer {
-  background-color: black;
-  color: white;
-  text-align: center;
-  padding: 2%;
-  bottom: 0;
-  width: 95%;
-}
+       text-align: center;
+      background-color: black;
+      color: white;
+      padding: 10px 0;
+    }
+
+    footer p {
+      margin: 0;
+    }
 
 .intro { 
   margin: 0 auto; 
